# quarry

./: README.md  package.json  pnpm-lock.yaml  shell.nix
src-tauri/: :w  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: action_registry.rs  clipboard_manager.rs  lib.rs  main.rs  types.rs  usage_tracker.rs
src-tauri/src/searchers/: apps.rs  clipboard.rs  colorpicker.rs  dictionary.rs  emojis.rs  lorem.rs  math.rs  mod.rs  processkiller.rs  shell.rs  system.rs
src-tauri/src/searchers/web_searchers/: github.rs  google.rs  mod.rs  nix.rs  urls.rs  youtube.rs
src/lib/: Icon.svelte  RenderClipboard.svelte  RenderColorPicker.svelte  RenderDictionary.svelte  RenderEmojis.svelte  RenderGrid.svelte  RenderList.svelte  ResultsGrid.svelte  ResultsList.svelte  keyHandler.ts  searcher.ts
src/routes/: +page.svelte
src/stores/: search.ts
