[package]
name = "quarry"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quarry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
desktopentries = "0.1.2"
freedesktop-desktop-entry = "0.7.14"
base64 = "0.22.1"
urlencoding = "2.1.3"
regex = "1.12.2"
lazy_static = "1.5.0"
meval = "0.2.0"
freedesktop-icons = "0.4.0"
once_cell = "1.21.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

